Pipe filter implementation

--- a/src/app/province/province.component.html
+++ b/src/app/province/province.component.html
@@ -2,8 +2,8 @@
   <div class='col-sm-4 bg-light'>
     <h3>Cities in {{ province }}, {{ countryName }}</h3>
     <input type='text' class='form-control mb-3' (keyup)="searchTextChange($event)" name='searchText' placeholder='Type City name to filter' />
-    <div *ngFor="let city of cities">
-      <p *ngIf="city.toLowerCase().includes(searchText.toLowerCase())" class='small'>
+    <div *ngFor="let city of cities | caseInsensitiveFilter: searchText">
+      <p class='small'>
         {{ city }}
       </p>
     </div>
