--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,8 +1,8 @@
 <div class='row'>
   <div class='col-sm-4 bg-light'>
     <input type='text' class='form-control mb-3' (keyup)="searchCountryChange($event)" name='searchCountry' placeholder='Type Country name to filter' />
-    <div *ngFor="let country of countries">
-      <p *ngIf="country.toLowerCase().includes(searchCountry.toLowerCase())" class='small'>
+    <div *ngFor="let country of countries | caseInsensitiveFilter: searchCountry">
+      <p class='small'>
         <button class='btn btn-link' (click)="getCountryDetails(country)">{{ country }}</button>
       </p>
     </div>
