Home button added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <header class='container'>
-  <h1 class='text-center pb-5'>Find your destination</h1>
-</header>
+  <a routerLink="/">HOME</a>
 <main class="container">
   <router-outlet></router-outlet>
 </main>
